# ceia-ast-tpf

./: .gitignore  Pronóstico de Demanda Eléctrica GBA.pptx  README.md  TPF_AST.ipynb  demanda_temp.csv  demanda_temp_aparente.csv  pyproject.toml
